FROG CMS - Change Log

======
Sigla:
+ enhancement, addition
- bug fix
. other development
======

?.?.? - release ???

- Fixed security issue with DB username password in index.php
. Removed comments css code from admin.css
. Updated default Layout to find metadata from Edit.Page.Metadata tab
. Changed default footer snippet to read copyright Madebyfrog.com instead of Philworks.com
- Fixed incorrect return and if statement in DoPgsql.php
- Fixed accidental assignment bug in Framework.php (issue 43)
. Corrected the default RSS Feed, should now validate. Also added RSS subscription link tag to default Normal template.
- Fixed bug where "Files" tab was accessible to users without roles. Now restricted to "administrator,developer,editor" (issue 42)
- Fixed bug where using permissions string as parameter to addController had no effect (issue 41)
+ Added admin section option to choose default tab after login (issue 29)
+ Added display of latest plugin version in Frog admin section
. Updated dutch translation
+ Added en-messages.php.template to i18n directory of core to assist translators
- Fixed bug allowing HTML code in page title, now filtered with Kses

0.9.3 - released 2008.08.14

+ license change to AGPLv3
+ auto page tabs generation "javascript"
+ i18n for filemanager plugin - fr
+ i18n for plugin api
- mktime() warning in archive plugin issue fixed
- installation without PDO driver, but with PDO installed issue fixed
+ new improved installation script ( without choosing the use of PDO )
. removing autoenabling comment plugin from core website
- comment plugin edit fixed
+ Adding Russian translation
- fixed: page updated_on and published_on
+ Adding Czech translation
- issue #22: Fix for FileManager plugin
- fixed CSS for ul list line-height
- fixed sqlite use without mysql driver installed with pdo
+ adding keywords() and description() to page object
+ Bangla/Bengali translation added
+ Polish translation added
- fixed archive sql data